@startuml SocialNetworkER
!theme plain

package "User Service Database" #aliceblue {
    entity "users" as U #lightblue {
        * id : integer (PK)
        --
        login : string(50) (unique)
        email : string(255) (unique)
        password_hash : string(128)
        first_name : string(50)
        last_name : string(50)
        date_of_birth : date
        phone : string(20)
        created_at : datetime
        updated_at : datetime
    }
}

package "Post Service Database" #honeydew {
    entity "posts" as P #lightgreen {
        * id : uuid (PK)
        --
        title : string(255)
        description : text
        author_id : integer
        created_at : datetime
        updated_at : datetime
        is_private : boolean
        tags : json
    }

    entity "post_comments" as C #lightgreen {
        * id : integer (PK)
        --
        post_id : uuid (FK)
        user_id : integer
        content : text
        created_at : datetime
        updated_at : datetime
    }

    entity "post_likes" as L #lightgreen {
        * id : integer (PK)
        --
        post_id : uuid (FK)
        user_id : integer
        liked_at : datetime
        --
        unique(post_id, user_id)
    }

    entity "post_views" as V #lightgreen {
        * id : integer (PK)
        --
        post_id : uuid (FK)
        user_id : integer
        viewed_at : datetime
        --
        unique(post_id, user_id)
    }

    P::id --> C::post_id
    P::id --> L::post_id
    P::id --> V::post_id
}

package "Statistics Service Database (ClickHouse)" #lavender {
    entity "post_events" as PE #plum {
        * event_id : string
        --
        post_id : string
        user_id : integer
        event_type : string
        event_data : json
        timestamp : datetime
        date : date
    }

    entity "user_events" as UE #plum {
        * event_id : string
        --
        user_id : integer
        event_type : string
        event_data : json
        timestamp : datetime
        date : date
    }
}

' Cross-service relationships (logical, not enforced by FK)
U::id ..> P::author_id : "создает посты"
U::id ..> C::user_id : "пишет комментарии"
U::id ..> L::user_id : "ставит лайки"
U::id ..> V::user_id : "просматривает посты"

' Analytics relationships (events flow)
P::id ..> PE::post_id : "события постов"
U::id ..> PE::user_id : "пользователь в событиях"
U::id ..> UE::user_id : "события пользователей"

note right of U : "Tortoise ORM модель\nс базовой информацией\nо пользователе"
note right of P : "Tortoise ORM модель\nс UUID первичным ключом"
note right of C : "Комментарии к постам\n(без вложенности)"
note right of L : "Лайки с ограничением\nуникальности"
note right of V : "Просмотры постов\nдля аналитики"
note right of PE : "ClickHouse таблица\nдля событий постов\n(просмотры, лайки, комментарии)"
note right of UE : "ClickHouse таблица\nдля событий пользователей\n(регистрации, активность)"

@enduml